// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyList component matches snapshot with optional props 1`] = `
<Adapter>
  <Adapter>
    <Row
      gutter={0}
    >
      <Col
        offset={2}
        span={20}
      >
        <div
          className="top-margin"
        >
          <Title>
            Custom list
             
            <Connect(WrappedComponentShell)
              id={1}
              key="delete"
              name="Custom list"
              needRedirect={true}
              triggerComponent={[Function]}
              triggerProps={
                Object {
                  "type": "minus-circle",
                }
              }
            />
          </Title>
        </div>
      </Col>
    </Row>
    <ListContainer
      currentPage={2}
      emptyListTxt="No movies in Custom list found"
      error=""
      fetchList={[MockFunction]}
      list={
        Array [
          Object {
            "id": 1,
            "title": "Mock title",
          },
        ]
      }
      loading={false}
      removeModalAction={[MockFunction]}
      removeModalTxt="Do you want to delete this item from the Custom list?"
      totalItems={21}
    />
  </Adapter>
</Adapter>
`;

exports[`MyList component matches snapshot with required props 1`] = `
<Adapter>
  <Adapter>
    <Row
      gutter={0}
    >
      <Col
        offset={2}
        span={20}
      >
        <div
          className="top-margin"
        >
          <Title>
            List
             
          </Title>
        </div>
      </Col>
    </Row>
    <ListContainer
      currentPage={2}
      emptyListTxt="No movies in this list found"
      error=""
      fetchList={[MockFunction]}
      list={null}
      loading={false}
      removeModalAction={[MockFunction]}
      removeModalTxt="Do you want to delete this item from the list?"
      totalItems={21}
    />
  </Adapter>
</Adapter>
`;
